--- a/election/elections/templates/elections/result.html
+++ b/election/elections/templates/elections/result.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>{{area}} 여론조사 결과</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-    />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  </head>
-  <body>
+{% extends 'elections/layout.html' %}
+
+{% block title %}
+여론조사 결과
+{% endblock title %}
+    
+
+
+{% block content %}
     <div class="container">
       <h1>{{area}} 여론조사 결과</h1>
       <br />
@@ -40,5 +35,5 @@
         <tbody></tbody>
       </table>
     </div>
-  </body>
-</html>
+
+{% endblock content %}
