--- a/election/elections/templates/elections/layout.html
+++ b/election/elections/templates/elections/layout.html
@@ -1,9 +1,10 @@
-<!-- C:\Code\mysite\elections\templates\elections\layout.html-->
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'elections/favicon.ico' %}">
     <title>{% block title %}{% endblock %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
