--- a/election/elections/templates/elections/index.html
+++ b/election/elections/templates/elections/index.html
@@ -17,6 +17,7 @@
                 <tr>
                     <td><B>이름</B></td>
                     <td><B>소개</B></td>
+                    <td><B>TYPE</B></td>
                     <td><B>출마지역</B></td>
                     <td><B>기호</B></td>
                 </tr>
@@ -26,6 +27,7 @@
                 <tr>
                     <td>{{candidate.name}}</td>
                     <td>{{candidate.introduction}}</td>
+                    <td>{{candidate.type}}</td>
                     <td><a href="areas/{{candidate.area}}">{{candidate.area}}</a></td>
                     <td>{{candidate.party_number}}</td>
                 </tr>
